--- a/xem-phim-moi/vung-dat-linh-hon/index.html
+++ b/xem-phim-moi/vung-dat-linh-hon/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             13
+             14
             </dd>
             <br/>
            </dl>
@@ -1607,28 +1607,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1641,6 +1619,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1686,18 +1686,15 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-tuyet-frosty" title="Người Tuyết Frosty">
+          <a class="list-top-movie-link" href="/phim-moi/23759" title="">
            <span class="status">
-            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-tuyet-frosty-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Tuyết Frosty
             </span>
             <span class="list-top-movie-item-en">
-             Frosty the Snowman
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1708,18 +1705,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tro-ve-nha-2" title="Trở Về Nhà">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-sao-tuyet-vong" title="Ngôi Sao Tuyệt Vọng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-ve-nha-2022-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-sao-tuyet-vong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trở Về Nhà
+             Ngôi Sao Tuyệt Vọng
             </span>
             <span class="list-top-movie-item-en">
-             Homesick
+             Broken Star
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sung-than" title="Súng Thần">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sung-than-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Súng Thần
+            </span>
+            <span class="list-top-movie-item-en">
+             Double Tap
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cherry-magic-30-tuoi-van-con-zin-se-bien-thanh-phu-thuy" title="Cherry Magic: 30 Tuổi Vẫn Còn “Zin” Sẽ Biến Thành Phù Thủy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cherry-magic-30-tuoi-van-con-zin-se-bien-thanh-phu-thuy-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cherry Magic: 30 Tuổi Vẫn Còn “Zin” Sẽ Biến Thành Phù Thủy
+            </span>
+            <span class="list-top-movie-item-en">
+             Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1730,65 +1771,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-loi-thoat-2" title="Không Lối Thoát">
+          <a class="list-top-movie-link" href="/phim-moi/sherlock-holmes-phan-6" title="Sherlock Holmes (Phần 6)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-loi-thoat-2015-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sherlock-holmes-phan-6-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không Lối Thoát
+             Sherlock Holmes (Phần 6)
             </span>
             <span class="list-top-movie-item-en">
-             No Escape
+             Sherlock Holmes (Season 6)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gap-go-hanh-phuc" title="Gặp Gỡ Hạnh Phúc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gap-go-hanh-phuc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Gặp Gỡ Hạnh Phúc
-            </span>
-            <span class="list-top-movie-item-en">
-             When We Are Together
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bam-sat-hy-vong" title="Bám sát hy vọng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bam-sat-hy-vong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bám sát hy vọng
-            </span>
-            <span class="list-top-movie-item-en">
-             Stick to Hope
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
